增加新的延迟检测引擎